# RiskMap

./: .env.dev  .env.example  .gitattributes  .gitignore  PROCHTI-MENYA.txt  README.md  docker-compose.yml  nedelya_1_komanda.md  nedelya_subsidii_plan.md  start.bat  start.sh  ПРОЧТИ-МЕНЯ.txt  ТЗ Интерактивная карта рисков.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed_data.py
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/agro/: models.py  serializers.py  urls.py  views.py
backend/alembic/: env.py  script.py.mako
backend/analytics/: models.py  serializers.py  urls.py  views.py
backend/app/: main.py
backend/budget/: filters.py  models.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/construction/: models.py  serializers.py  urls.py  views.py
backend/entities/: models.py  serializers.py  urls.py  views.py
backend/integrations/: goszakup.py  sync.py  urls.py  views.py
backend/osms/: apps.py  models.py  serializers.py  urls.py  views.py
backend/procurement/: filters.py  models.py  serializers.py  urls.py  views.py
backend/regions/: models.py  serializers.py  urls.py  views.py
backend/riskmap/: settings.py  urls.py
backend/risks/: filters.py  models.py  serializers.py  urls.py  views.py
backend/scripts/: anonymize.py  build_relations.py  load_layers.py  load_territories.py  seed_access.py  source_manifest.py
backend/subsoil/: apps.py  models.py  serializers.py  urls.py  views.py
backend/territories/: admin.py  analytics.py  models.py  reference_data.py  serializers.py  urls.py  views.py
backend/tests/: conftest.py  (+24 more)
(+261 files in other folders)
