[project]
name = "riskmap-backend"
version = "0.1.0"
description = "ИАС «Интерактивная карта рисков» — backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.120",
    "uvicorn[standard]>=0.40",
    "pydantic>=2.13",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0.51",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "geoalchemy2>=0.18",
    "shapely>=2.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"
markers = [
    "golden: сверка расчёта с эталонными строками исходных книг",
    "slow: тест читает большие книги целиком",
    "integration: требуется живая база PostgreSQL/PostGIS",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    # Кириллица в идентификаторах не используется, но в строках и docstring — да.
    "RUF001", "RUF002", "RUF003",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "shapely.*", "docx.*"]
ignore_missing_imports = true
